--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,5 +51,8 @@ dependencies {
 
     implementation 'com.github.rahatarmanahmed:circularprogressview:2.5.0'
 
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+
+
 
 }
