--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,5 +54,9 @@ dependencies {
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
 
 
+    implementation 'androidx.recyclerview:recyclerview:1.3.1'
+    implementation 'androidx.recyclerview:recyclerview-selection:1.1.0' 
+
+
 
 }
